some changes for refactoring